--- a/image_storage/package.json
+++ b/image_storage/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
   },
@@ -27,6 +28,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.0.0"
   }
 }
